2007-03-30  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpheal.c (gimp_heal_laplace_iteration)
	(gimp_heal_laplace_loop): compare square of errors instead of
	calculating the square root. Rewritten loop to avoid code
	duplication.

2007-03-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch]
	* app/tools/gimpperspectiveclonetool.c
	* app/tools/gimptransformtool.c: compare squared distances.

2007-03-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw_guides):
	hardcode the result of sqrt(5).

2007-03-29  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.c (gimp_tool_check_click_distance): don't
	compare the result of sqrt() with something, compare the original
	value with something's square instead.

2007-03-29  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrushgenerated.c (gimp_brush_generated_calc): moved
	generation of the lookup table to it's own function. Also changed
	SUPERSAMPLING from 5 to 4. Let's see if someone complains...

2007-03-29  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppixelrgn.c: code cleanup. Removed MEMCPY_IS_NICE
	define and unconditionally use memcpy().

2007-03-29  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppixelrgn.c (gimp_pixel_rgn_init): initialize
	rowstride to zero; it's meaningless as long as data is NULL.

2007-03-28  Sven Neumann  <sven@gimp.org>

	* app/pdb/layer_cmds.c
	* libgimp/gimplayer_pdb.c: regenerated.

2007-03-28 João S. O. Bueno Calligaris <gwidion@mpc.com.br>

        * tools/pdbgen/pdb/layer.pdb: clarified documentation for
	add_mask procedure; fixed typo in documentation for create_mask.

2007-03-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdbusservice.[ch]
	* app/widgets/dbus-service.xml: added a boolean return value to
	the D-Bus Open method.

2007-03-27  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.[ch]: changed file_open_from_command_line()
	to deal with a single filename only.

	* app/widgets/gimpdbusservice.[ch]